...

    var id: String { rawValue }

    var displayName: String {
        switch self {
        case .wantToRead: "Want to Read"
        case .reading: "Reading"
        case .finished: "Finished"
        case .abandoned: "Abandoned"
        }
    }

    var iconName: String {
...
